--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -12,15 +12,36 @@
 \section{Introduction}
 The United States Census Bureau has been conducting a decennial census since 1790.  Originally this census was a simply to count the population across the country.  More recently the decennial census includes a short-form asking for name, sex, age, and a few other demographic variables.  About one in six households also received a long-form that contained additional socioeconomic questions.  After the 2000 decennial census many of the long-form questions were collected as part of a new survey: the American Community Survey (ACS).  \\
 \\
-The ACS is an ongoing yearly survey that collects additional demographic variables including but not limited to age, sex, race, income and education.  Similar to the decennial census long-form, the American Community Survey is distributed based on a random selection of addresses every year.  This data is meant to provide more up to date information than the Census Bureau's decennial census and both the decennial census and the American Community Survey are required by law.\\
+The ACS is an ongoing yearly survey that collects additional demographic variables including but not limited to age, sex, race, income and education.  Unlike the decennial census, the American Community Survey is distributed based on a random selection of addresses every year.  Although the ACS is only sent to a sample of all US households, this data is meant to provide more up to date information than the Census Bureau's decennial census.  Both the decennial census and the American Community Survey are required to be completed by law; however it should be noted that the Census Bureau has not opted to prosecute anyone for failure to complete the decennial census or the ACS.  Despite the lack of enforcement, the ACS still reports a response rate of 97$\%$.\\ %http://www.politifact.com/texas/statements/2014/jan/09/us-census-bureau/americans-must-answer-us-census-bureau-survey-law-/
 \\
-Both the decennial survey and the ACS data are used in part by federal, state and local agencies to allocate state funding and for policy decisions.  The Census Bureau has also released some of this data for public use.  Many of the data sets are available directly in a compressed format from the Census Bureau's FTP site: \url{http://ftp2.census.gov/}.  Since 2012, the Census Bureau has also included an online developer's API in order to improve accessibility of the ACS and decennial census datasets.\\
+Both the decennial survey and the ACS data are used in part by federal, state and local agencies to allocate state funding and for policy decisions.  The Census Bureau has also released some of this data for public use.  Many of the data sets are available directly in a compressed format from the Census Bureau's FTP site: \url{http://ftp2.census.gov/}.  Since 2012, the Census Bureau has also included an online developer's API in order to improve accessibility of the ACS and decennial census datasets.  The Census Bureau's online API can be accessed online: \url{http://api.census.gov}.\\
 \\
-We will discuss how the ACS data is organized and how to access data from the Census Bureau's online developer's API.  We will also discuss what kind of variables are available and some limitations with the API.  We will use "Taking a Chance in the Classroom: The American Community Survey", an article by Morgan, Cetinkaya-Rundel and Stangl as a starting point on some of the limitations of the API.  This article explores some multivariate frequency distributions using data from the ACS dataset; however, there are some gaps in what we can access and inconsistencies in the database.
+We will discuss how the ACS data is structured when we request data and how to access data from the Census Bureau's online developer's API.  We will also discuss what kind of variables are available and some limitations with the API.  We will use "Taking a Chance in the Classroom: The American Community Survey", an article by Morgan, Cetinkaya-Rundel and Stangl as a starting point on some of the limitations of the API.  This article explores some multivariate frequency distributions using data from the ACS dataset; however, there are some gaps in what we can access and inconsistencies in the database.
 
 \section{Geography}
-Before we take a look at how the variables in the Census Bureau API are organized, we first look at how the Census Bureau handles the various geographic borders.  The Census Bureau has a very sophisticated system of hierarchy for geography.  For the ACS, at the top level there is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  Outside of the ACS, the Census Bureau employs at least a dozen other geographic concepts.\\
+The Census Bureau has a very sophisticated system of hierarchy for geography.  For the ACS, at the top level there is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  See figure \ref{} for a complete table of geographies available on the census API.\\ %insert table%
 \\
+Each dataset available on the Census Bureau online API include an associated geography file formatted in JSON and a similar file formatted in XML.  JSON stands for JavaScript Object Notation and it is a lightweight machine format for sending data.  JSON is structured using name-value pairs and is also designed to be human-readable.  There are many libraries to generate and process JSON.  The JSON formatted file for geographies has the following format:
+\begin{verbatim}
+{
+  "name": "tract",
+  "requires:" [
+    "state",
+    "county"
+  ],
+  "optionalWithWCFor": "county"
+}
+\end{verbatim}
+This JSON file specifies that for census tract level geography we are required to specify a state.  Additionally we can also specify both a state and a county.\\
+\\
+Alternatively, the geographic information is available in XML.  XML stands for Extensible Markup Language and is similar in structure to the HTML format used for webpages.  XML is another format for sending and storing data.  It is formatted in a tree-like structure with a hierarchy of categories with associated values.  Here is the same geographic area information formatted in XML:
+\begin{verbatim}
+<fips name="tract">
+  <requires name="state"/>
+  <requires name="county" is-optional-with-wcfor="true"/>
+</fips>
+\end{verbatim}
+In the following example, we will examine various geographies available from the online API for the state of California.\\
 <<state, echo=FALSE, warning=FALSE, message=FALSE, fig.height=3, cache=TRUE>>=
 library(ggplot2)
 states.map = map_data("state")
@@ -28,6 +49,8 @@ states.map$CA = states.map$region=="california"
 qplot(long, lat, data=states.map, group=group, order=order, geom="polygon", fill=CA) + 
   theme(legend.position = "none")
 @
+%http://api.census.gov/data/2012/acs5/geo.html
+
 Near the very top of the hierarchy we can view data from all states or specify a state.  In the above plot we have selected California.\\
 \\
 <<county, echo=FALSE, warning=FALSE, message=FALSE, fig.height=3, cache=TRUE>>=
@@ -52,37 +75,19 @@ qplot(long, lat, data=ca.geo, group=group, order=order, geom="polygon", fill=fac
 qplot(long, lat, data=subset(ca.geo, LA > 0), group=group, order=order, geom="polygon", fill=factor(LA)) + theme(legend.position = "none")
 @
 
-There are a number of geographies available below the state and county level.  For example, the API also supports school districts, county subdivision, metropolitan statistical areas and legislative districts.  For many of these geographic divisions it is not possible to pull data without specifying a state or a county.  Above we have selected Pasadena, a county subdivision, within Los Angeles County.\\
+There are a number of geographies available below the state and county level.  For example, the API also supports school districts, county subdivision, metropolitan statistical areas and legislative districts.  It is not possible to request data for many of the smaller geographic divisions without specifying a state or a county.  Above we have selected Pasadena, a county subdivision, within Los Angeles County.\\
 \\
 Below the county level it is quite complicated which items need to be specified.  For example, if we wanted census tracts we need to specify state and county but we cannot specify state, county, census tract and county subdivision.  Another complication is that some of the smaller geographic divisions are not necessarily nested in one of the larger geographic divisions; for example, ZIP code areas are generally used by the United States Postal Service and might span different counties or census tracts.  Additionally, Legislative districts do not line up with county borders and school districts often do not line up with either legislative distrcits or county borders.\\
 \\
-For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}.  Fortunately, the census bureau has also included JSON and XML files that can be parsed to insure that a valid geography is requested.\\
+For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}.\\
 \\
-Each dataset available on the Census Bureau online API include an associated geography file formatted in JSON as follows:
-\begin{verbatim}
-{
-  "name": "tract",
-  "requires:" [
-    "state",
-    "county"
-  ],
-  "optionalWithWCFor": "county"
-}
-\end{verbatim}
-Here is the corresponding geographic area formatted in XML:
-\begin{verbatim}
-<fips name="tract">
-  <requires name="state"/>
-  <requires name="county" is-optional-with-wcfor="true"/>
-</fips>
-\end{verbatim}
-The JSON and XML indicate for this dataset requesting a census tract level information we are required to specify a state.  We may also specify a county if we wish to request information for some or all census tracts in a county but if we do not specify a county we can have a similar request for some or all census tracts in a state.
+
 
 \section{Finding Data Sets and Tables}
 %XML/JSON structure for variables list
 A recent addition to the Census Bureau API is the inclusion of a master index of available dataset formatted in both JSON and XML.  
 
-\section{Table Structure}
+\section{Requesting Data and Table Structure}
 
 
 \section{Limitations}
